nodejs/versioned_docs/version-1.12/api/class-frame.mdx
---
id: class-frame
title: "Frame"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

At every point of time, page exposes its current frame tree via the [page.mainFrame()](./api/class-page.mdx#page-main-frame) and [frame.childFrames()](./api/class-frame.mdx#frame-child-frames) methods.

[Frame] object's lifecycle is controlled by three events, dispatched on the page object:
* [page.on('frameattached')](./api/class-page.mdx#page-event-frame-attached) - fired when the frame gets attached to the page. A Frame can be attached to the page only once.
* [page.on('framenavigated')](./api/class-page.mdx#page-event-frame-navigated) - fired when the frame commits navigation to a different URL.
* [page.on('framedetached')](./api/class-page.mdx#page-event-frame-detached) - fired when the frame gets detached from the page.  A Frame can be detached from the page only once.

An example of dumping frame tree:

```js
const { firefox } = require('playwright');  // Or 'chromium' or 'webkit'.

(async () => {
  const browser = await firefox.launch();
  const page = await browser.newPage();
  await page.goto('https://www.google.com/chrome/browser/canary.html');
  dumpFrameTree(page.mainFrame(), '');
  await browser.close();

  function dumpFrameTree(frame, indent) {
    console.log(indent + frame.url());
    for (const child of frame.childFrames()) {
      dumpFrameTree(child, indent + '  ');
    }
  }
})();
```


- [frame.$(selector)](./api/class-frame.mdx#frame-query-selector)
- [frame.$$(selector)](./api/class-frame.mdx#frame-query-selector-all)
- [frame.$$eval(selector, pageFunction[, arg])](./api/class-frame.mdx#frame-eval-on-selector-all)
- [frame.$eval(selector, pageFunction[, arg])](./api/class-frame.mdx#frame-eval-on-selector)
- [frame.addScriptTag([options])](./api/class-frame.mdx#frame-add-script-tag)
- [frame.addStyleTag([options])](./api/class-frame.mdx#frame-add-style-tag)
- [frame.check(selector[, options])](./api/class-frame.mdx#frame-check)
- [frame.childFrames()](./api/class-frame.mdx#frame-child-frames)
- [frame.click(selector[, options])](./api/class-frame.mdx#frame-click)
- [frame.content()](./api/class-frame.mdx#frame-content)
- [frame.dblclick(selector[, options])](./api/class-frame.mdx#frame-dblclick)
- [frame.dispatchEvent(selector, type[, eventInit, options])](./api/class-frame.mdx#frame-dispatch-event)
- [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate)
- [frame.evaluateHandle(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate-handle)
- [frame.fill(selector, value[, options])](./api/class-frame.mdx#frame-fill)
- [frame.focus(selector[, options])](./api/class-frame.mdx#frame-focus)
- [frame.frameElement()](./api/class-frame.mdx#frame-frame-element)
- [frame.getAttribute(selector, name[, options])](./api/class-frame.mdx#frame-get-attribute)
- [frame.goto(url[, options])](./api/class-frame.mdx#frame-goto)
- [frame.hover(selector[, options])](./api/class-frame.mdx#frame-hover)
- [frame.innerHTML(selector[, options])](./api/class-frame.mdx#frame-inner-html)
- [frame.innerText(selector[, options])](./api/class-frame.mdx#frame-inner-text)
- [frame.isChecked(selector[, options])](./api/class-frame.mdx#frame-is-checked)
- [frame.isDetached()](./api/class-frame.mdx#frame-is-detached)
- [frame.isDisabled(selector[, options])](./api/class-frame.mdx#frame-is-disabled)
- [frame.isEditable(selector[, options])](./api/class-frame.mdx#frame-is-editable)
- [frame.isEnabled(selector[, options])](./api/class-frame.mdx#frame-is-enabled)
- [frame.isHidden(selector[, options])](./api/class-frame.mdx#frame-is-hidden)
- [frame.isVisible(selector[, options])](./api/class-frame.mdx#frame-is-visible)
- [frame.name()](./api/class-frame.mdx#frame-name)
- [frame.page()](./api/class-frame.mdx#frame-page)
- [frame.parentFrame()](./api/class-frame.mdx#frame-parent-frame)
- [frame.press(selector, key[, options])](./api/class-frame.mdx#frame-press)
- [frame.selectOption(selector, values[, options])](./api/class-frame.mdx#frame-select-option)
- [frame.setContent(html[, options])](./api/class-frame.mdx#frame-set-content)
- [frame.setInputFiles(selector, files[, options])](./api/class-frame.mdx#frame-set-input-files)
- [frame.tap(selector[, options])](./api/class-frame.mdx#frame-tap)
- [frame.textContent(selector[, options])](./api/class-frame.mdx#frame-text-content)
- [frame.title()](./api/class-frame.mdx#frame-title)
- [frame.type(selector, text[, options])](./api/class-frame.mdx#frame-type)
- [frame.uncheck(selector[, options])](./api/class-frame.mdx#frame-uncheck)
- [frame.url()](./api/class-frame.mdx#frame-url)
- [frame.waitForFunction(pageFunction[, arg, options])](./api/class-frame.mdx#frame-wait-for-function)
- [frame.waitForLoadState([state, options])](./api/class-frame.mdx#frame-wait-for-load-state)
- [frame.waitForNavigation([options])](./api/class-frame.mdx#frame-wait-for-navigation)
- [frame.waitForSelector(selector[, options])](./api/class-frame.mdx#frame-wait-for-selector)
- [frame.waitForTimeout(timeout)](./api/class-frame.mdx#frame-wait-for-timeout)
- [frame.waitForURL(url[, options])](./api/class-frame.mdx#frame-wait-for-url)

## frame.$(selector) {#frame-query-selector}
- `selector` &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- returns: &#60;[Promise]<[null]|[ElementHandle]>&#62;

Returns the ElementHandle pointing to the frame element.

The method finds an element matching the specified selector within the frame. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns `null`.

## frame.$$(selector) {#frame-query-selector-all}
- `selector` &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- returns: &#60;[Promise]<[Array]<[ElementHandle]>>&#62;

Returns the ElementHandles pointing to the frame elements.

The method finds all elements matching the specified selector within the frame. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns empty array.

## frame.$eval(selector, pageFunction[, arg]) {#frame-eval-on-selector}
- `selector` &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `pageFunction` &#60;[function]\([Element]\)&#62; Function to be evaluated in the page context.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.
- returns: &#60;[Promise]<[Serializable]>&#62;

Returns the return value of `pageFunction`.

The method finds an element matching the specified selector within the frame and passes it as a first argument to `pageFunction`. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, the method throws an error.

If `pageFunction` returns a [Promise], then [frame.$eval(selector, pageFunction[, arg])](./api/class-frame.mdx#frame-eval-on-selector) would wait for the promise to resolve and return its value.

Examples:

```js
const searchValue = await frame.$eval('#search', el => el.value);
const preloadHref = await frame.$eval('link[rel=preload]', el => el.href);
const html = await frame.$eval('.main-container', (e, suffix) => e.outerHTML + suffix, 'hello');
```

## frame.$$eval(selector, pageFunction[, arg]) {#frame-eval-on-selector-all}
- `selector` &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `pageFunction` &#60;[function]\([Array]<[Element]>\)&#62; Function to be evaluated in the page context.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.
- returns: &#60;[Promise]<[Serializable]>&#62;

Returns the return value of `pageFunction`.

The method finds all elements matching the specified selector within the frame and passes an array of matched elements as a first argument to `pageFunction`. See [Working with selectors](./selectors.mdx) for more details.

If `pageFunction` returns a [Promise], then [frame.$$eval(selector, pageFunction[, arg])](./api/class-frame.mdx#frame-eval-on-selector-all) would wait for the promise to resolve and return its value.

Examples:

```js
const divsCounts = await frame.$$eval('div', (divs, min) => divs.length >= min, 10);
```

## frame.addScriptTag([options]) {#frame-add-script-tag}
- `options` &#60;[Object]&#62;
  - `content` &#60;[string]&#62; Raw JavaScript content to be injected into frame.
  - `path` &#60;[string]&#62; Path to the JavaScript file to be injected into frame. If `path` is a relative path, then it is resolved relative to the current working directory.
  - `type` &#60;[string]&#62; Script type. Use 'module' in order to load a Javascript ES6 module. See [script](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script) for more details.
  - `url` &#60;[string]&#62; URL of a script to be added.
- returns: &#60;[Promise]<[ElementHandle]>&#62;

Returns the added tag when the script's onload fires or when the script content was injected into frame.

Adds a `<script>` tag into the page with the desired url or content.

## frame.addStyleTag([options]) {#frame-add-style-tag}
- `options` &#60;[Object]&#62;
  - `content` &#60;[string]&#62; Raw CSS content to be injected into frame.
  - `path` &#60;[string]&#62; Path to the CSS file to be injected into frame. If `path` is a relative path, then it is resolved relative to the current working directory.
  - `url` &#60;[string]&#62; URL of the `<link>` tag.
- returns: &#60;[Promise]<[ElementHandle]>&#62;

Returns the added tag when the stylesheet's onload fires or when the CSS content was injected into frame.

Adds a `<link rel="stylesheet">` tag into the page with the desired url or a `<style type="text/css">` tag with the content.

## frame.check(selector[, options]) {#frame-check}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `force` &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `position` &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `trial` &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[Promise]<[void]>&#62;

This method checks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Ensure that matched element is a checkbox or a radio input. If not, this method throws. If the element is already checked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.childFrames() {#frame-child-frames}
- returns: &#60;[Array]<[Frame]>&#62;

## frame.click(selector[, options]) {#frame-click}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
  - `clickCount` &#60;[number]&#62; defaults to 1. See [UIEvent.detail].
  - `delay` &#60;[number]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
  - `force` &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `modifiers` &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `position` &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `trial` &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[Promise]<[void]>&#62;

This method clicks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.content() {#frame-content}
- returns: &#60;[Promise]<[string]>&#62;

Gets the full HTML contents of the frame, including the doctype.

## frame.dblclick(selector[, options]) {#frame-dblclick}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
  - `delay` &#60;[number]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
  - `force` &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `modifiers` &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `position` &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `trial` &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[Promise]<[void]>&#62;

This method double clicks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to double click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set. Note that if the first click of the `dblclick()` triggers a navigation event, this method will throw.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`frame.dblclick()` dispatches two `click` events and a single `dblclick` event.
:::

## frame.dispatchEvent(selector, type[, eventInit, options]) {#frame-dispatch-event}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `type` &#60;[string]&#62; DOM event type: `"click"`, `"dragstart"`, etc.
- `eventInit` &#60;[EvaluationArgument]&#62; Optional event-specific initialization properties.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

The snippet below dispatches the `click` event on the element. Regardless of the visibility state of the element, `click` is dispatched. This is equivalent to calling [element.click()](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click).

```js
await frame.dispatchEvent('button#submit', 'click');
```

Under the hood, it creates an instance of an event based on the given `type`, initializes it with `eventInit` properties and dispatches it on the element. Events are `composed`, `cancelable` and bubble by default.

Since `eventInit` is event-specific, please refer to the events documentation for the lists of initial properties:
* [DragEvent](https://developer.mozilla.org/en-US/docs/Web/API/DragEvent/DragEvent)
* [FocusEvent](https://developer.mozilla.org/en-US/docs/Web/API/FocusEvent/FocusEvent)
* [KeyboardEvent](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/KeyboardEvent)
* [MouseEvent](https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/MouseEvent)
* [PointerEvent](https://developer.mozilla.org/en-US/docs/Web/API/PointerEvent/PointerEvent)
* [TouchEvent](https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent/TouchEvent)
* [Event](https://developer.mozilla.org/en-US/docs/Web/API/Event/Event)

You can also specify `JSHandle` as the property value if you want live objects to be passed into the event:

```js
// Note you can only create DataTransfer in Chromium and Firefox
const dataTransfer = await frame.evaluateHandle(() => new DataTransfer());
await frame.dispatchEvent('#source', 'dragstart', { dataTransfer });
```

## frame.evaluate(pageFunction[, arg]) {#frame-evaluate}
- `pageFunction` &#60;[function]|[string]&#62; Function to be evaluated in the page context.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.
- returns: &#60;[Promise]<[Serializable]>&#62;

Returns the return value of `pageFunction`.

If the function passed to the [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate) returns a [Promise], then [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate) would wait for the promise to resolve and return its value.

If the function passed to the [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate) returns a non-[Serializable] value, then [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate) returns `undefined`. Playwright also supports transferring some additional values that are not serializable by `JSON`: `-0`, `NaN`, `Infinity`, `-Infinity`.

```js
const result = await frame.evaluate(([x, y]) => {
  return Promise.resolve(x * y);
}, [7, 8]);
console.log(result); // prints "56"
```

A string can also be passed in instead of a function.

```js
console.log(await frame.evaluate('1 + 2')); // prints "3"
```

[ElementHandle] instances can be passed as an argument to the [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate):

```js
const bodyHandle = await frame.$('body');
const html = await frame.evaluate(([body, suffix]) => body.innerHTML + suffix, [bodyHandle, 'hello']);
await bodyHandle.dispose();
```

## frame.evaluateHandle(pageFunction[, arg]) {#frame-evaluate-handle}
- `pageFunction` &#60;[function]|[string]&#62; Function to be evaluated in the page context.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.
- returns: &#60;[Promise]<[JSHandle]>&#62;

Returns the return value of `pageFunction` as a [JSHandle].

The only difference between [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate) and [frame.evaluateHandle(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate-handle) is that [frame.evaluateHandle(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate-handle) returns [JSHandle].

If the function, passed to the [frame.evaluateHandle(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate-handle), returns a [Promise], then [frame.evaluateHandle(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate-handle) would wait for the promise to resolve and return its value.

```js
const aWindowHandle = await frame.evaluateHandle(() => Promise.resolve(window));
aWindowHandle; // Handle for the window object.
```

A string can also be passed in instead of a function.

```js
const aHandle = await frame.evaluateHandle('document'); // Handle for the 'document'.
```

[JSHandle] instances can be passed as an argument to the [frame.evaluateHandle(pageFunction[, arg])](./api/class-frame.mdx#frame-evaluate-handle):

```js
const aHandle = await frame.evaluateHandle(() => document.body);
const resultHandle = await frame.evaluateHandle(([body, suffix]) => body.innerHTML + suffix, [aHandle, 'hello']);
console.log(await resultHandle.jsonValue());
await resultHandle.dispose();
```

## frame.fill(selector, value[, options]) {#frame-fill}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `value` &#60;[string]&#62; Value to fill for the `<input>`, `<textarea>` or `[contenteditable]` element.
- `options` &#60;[Object]&#62;
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

This method waits for an element matching `selector`, waits for [actionability](./actionability.mdx) checks, focuses the element, fills it and triggers an `input` event after filling. Note that you can pass an empty string to clear the input field.

If the target element is not an `<input>`, `<textarea>` or `[contenteditable]` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be filled instead.

To send fine-grained keyboard events, use [frame.type(selector, text[, options])](./api/class-frame.mdx#frame-type).

## frame.focus(selector[, options]) {#frame-focus}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

This method fetches an element with `selector` and focuses it. If there's no element matching `selector`, the method waits until a matching element appears in the DOM.

## frame.frameElement() {#frame-frame-element}
- returns: &#60;[Promise]<[ElementHandle]>&#62;

Returns the `frame` or `iframe` element handle which corresponds to this frame.

This is an inverse of [elementHandle.contentFrame()](./api/class-elementhandle.mdx#element-handle-content-frame). Note that returned handle actually belongs to the parent frame.

This method throws an error if the frame has been detached before `frameElement()` returns.

```js
const frameElement = await frame.frameElement();
const contentFrame = await frameElement.contentFrame();
console.log(frame === contentFrame);  // -> true
```

## frame.getAttribute(selector, name[, options]) {#frame-get-attribute}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `name` &#60;[string]&#62; Attribute name to get the value for.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[null]|[string]>&#62;

Returns element attribute value.

## frame.goto(url[, options]) {#frame-goto}
- `url` &#60;[string]&#62; URL to navigate frame to. The url should include scheme, e.g. `https://`.
- `options` &#60;[Object]&#62;
  - `referer` &#60;[string]&#62; Referer header value. If provided it will take preference over the referer header value set by [page.setExtraHTTPHeaders(headers)](./api/class-page.mdx#page-set-extra-http-headers).
  - `timeout` &#60;[number]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `waitUntil` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
    * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
    * `'load'` - consider operation to be finished when the `load` event is fired.
    * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[Promise]<[null]|[Response]>&#62;

Returns the main resource response. In case of multiple redirects, the navigation will resolve with the response of the last redirect.

`frame.goto` will throw an error if:
* there's an SSL error (e.g. in case of self-signed certificates).
* target URL is invalid.
* the `timeout` is exceeded during navigation.
* the remote server does not respond or is unreachable.
* the main resource failed to load.

`frame.goto` will not throw an error when any valid HTTP status code is returned by the remote server, including 404 "Not Found" and 500 "Internal Server Error".  The status code for such responses can be retrieved by calling [response.status()](./api/class-response.mdx#response-status).

:::note
`frame.goto` either throws an error or returns a main resource response. The only exceptions are navigation to `about:blank` or navigation to the same URL with a different hash, which would succeed and return `null`.
:::

:::note
Headless mode doesn't support navigation to a PDF document. See the [upstream issue](https://bugs.chromium.org/p/chromium/issues/detail?id=761295).
:::

## frame.hover(selector[, options]) {#frame-hover}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `force` &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `modifiers` &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `position` &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `trial` &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[Promise]<[void]>&#62;

This method hovers over an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to hover over the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.innerHTML(selector[, options]) {#frame-inner-html}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[string]>&#62;

Returns `element.innerHTML`.

## frame.innerText(selector[, options]) {#frame-inner-text}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[string]>&#62;

Returns `element.innerText`.

## frame.isChecked(selector[, options]) {#frame-is-checked}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[boolean]>&#62;

Returns whether the element is checked. Throws if the element is not a checkbox or radio input.

## frame.isDetached() {#frame-is-detached}
- returns: &#60;[boolean]&#62;

Returns `true` if the frame has been detached, or `false` otherwise.

## frame.isDisabled(selector[, options]) {#frame-is-disabled}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[boolean]>&#62;

Returns whether the element is disabled, the opposite of [enabled](./actionability.mdx#enabled).

## frame.isEditable(selector[, options]) {#frame-is-editable}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[boolean]>&#62;

Returns whether the element is [editable](./actionability.mdx#editable).

## frame.isEnabled(selector[, options]) {#frame-is-enabled}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[boolean]>&#62;

Returns whether the element is [enabled](./actionability.mdx#enabled).

## frame.isHidden(selector[, options]) {#frame-is-hidden}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[boolean]>&#62;

Returns whether the element is hidden, the opposite of [visible](./actionability.mdx#visible).  `selector` that does not match any elements is considered hidden.

## frame.isVisible(selector[, options]) {#frame-is-visible}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[boolean]>&#62;

Returns whether the element is [visible](./actionability.mdx#visible). `selector` that does not match any elements is considered not visible.

## frame.name() {#frame-name}
- returns: &#60;[string]&#62;

Returns frame's name attribute as specified in the tag.

If the name is empty, returns the id attribute instead.

:::note
This value is calculated once when the frame is created, and will not update if the attribute is changed later.
:::

## frame.page() {#frame-page}
- returns: &#60;[Page]&#62;

Returns the page containing this frame.

## frame.parentFrame() {#frame-parent-frame}
- returns: &#60;[null]|[Frame]&#62;

Parent frame, if any. Detached frames and main frames return `null`.

## frame.press(selector, key[, options]) {#frame-press}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `key` &#60;[string]&#62; Name of the key to press or a character to generate, such as `ArrowLeft` or `a`.
- `options` &#60;[Object]&#62;
  - `delay` &#60;[number]&#62; Time to wait between `keydown` and `keyup` in milliseconds. Defaults to 0.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

`key` can specify the intended [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) value or a single character to generate the text for. A superset of the `key` values can be found [here](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key/Key_Values). Examples of the keys are:

`F1` - `F12`, `Digit0`- `Digit9`, `KeyA`- `KeyZ`, `Backquote`, `Minus`, `Equal`, `Backslash`, `Backspace`, `Tab`, `Delete`, `Escape`, `ArrowDown`, `End`, `Enter`, `Home`, `Insert`, `PageDown`, `PageUp`, `ArrowRight`, `ArrowUp`, etc.

Following modification shortcuts are also supported: `Shift`, `Control`, `Alt`, `Meta`, `ShiftLeft`.

Holding down `Shift` will type the text that corresponds to the `key` in the upper case.

If `key` is a single character, it is case-sensitive, so the values `a` and `A` will generate different respective texts.

Shortcuts such as `key: "Control+o"` or `key: "Control+Shift+T"` are supported as well. When specified with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

## frame.selectOption(selector, values[, options]) {#frame-select-option}
- `selector` &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `values` &#60;[null]|[string]|[ElementHandle]|[Array]<[string]>|[Object]|[Array]<[ElementHandle]>|[Array]<[Object]>&#62; Options to select. If the `<select>` has the `multiple` attribute, all matching options are selected, otherwise only the first option matching one of the passed options is selected. String values are equivalent to `{value:'string'}`. Option is considered matching if all specified properties match.
  - `value` &#60;[string]&#62; Matches by `option.value`. Optional.
  - `label` &#60;[string]&#62; Matches by `option.label`. Optional.
  - `index` &#60;[number]&#62; Matches by the index. Optional.
- `options` &#60;[Object]&#62;
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[Array]<[string]>>&#62;

This method waits for an element matching `selector`, waits for [actionability](./actionability.mdx) checks, waits until all specified options are present in the `<select>` element and selects these options.

If the target element is not a `<select>` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be used instead.

Returns the array of option values that have been successfully selected.

Triggers a `change` and `input` event once all the provided options have been selected.

```js
// single selection matching the value
frame.selectOption('select#colors', 'blue');

// single selection matching both the value and the label
frame.selectOption('select#colors', { label: 'Blue' });

// multiple selection
frame.selectOption('select#colors', 'red', 'green', 'blue');
```

## frame.setContent(html[, options]) {#frame-set-content}
- `html` &#60;[string]&#62; HTML markup to assign to the page.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `waitUntil` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
    * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
    * `'load'` - consider operation to be finished when the `load` event is fired.
    * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[Promise]<[void]>&#62;

## frame.setInputFiles(selector, files[, options]) {#frame-set-input-files}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `files` &#60;[string]|[Array]<[string]>|[Object]|[Array]<[Object]>&#62;
  - `name` &#60;[string]&#62; File name
  - `mimeType` &#60;[string]&#62; File type
  - `buffer` &#60;[Buffer]&#62; File content
- `options` &#60;[Object]&#62;
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

This method expects `selector` to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input).

Sets the value of the file input to these file paths or files. If some of the `filePaths` are relative paths, then they are resolved relative to the the current working directory. For empty array, clears the selected files.

## frame.tap(selector[, options]) {#frame-tap}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `force` &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `modifiers` &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `position` &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `trial` &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[Promise]<[void]>&#62;

This method taps an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.touchscreen](./api/class-page.mdx#page-touchscreen) to tap the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`frame.tap()` requires that the `hasTouch` option of the browser context be set to true.
:::

## frame.textContent(selector[, options]) {#frame-text-content}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[null]|[string]>&#62;

Returns `element.textContent`.

## frame.title() {#frame-title}
- returns: &#60;[Promise]<[string]>&#62;

Returns the page title.

## frame.type(selector, text[, options]) {#frame-type}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `text` &#60;[string]&#62; A text to type into a focused element.
- `options` &#60;[Object]&#62;
  - `delay` &#60;[number]&#62; Time to wait between key presses in milliseconds. Defaults to 0.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

Sends a `keydown`, `keypress`/`input`, and `keyup` event for each character in the text. `frame.type` can be used to send fine-grained keyboard events. To fill values in form fields, use [frame.fill(selector, value[, options])](./api/class-frame.mdx#frame-fill).

To press a special key, like `Control` or `ArrowDown`, use [keyboard.press(key[, options])](./api/class-keyboard.mdx#keyboard-press).

```js
await frame.type('#mytextarea', 'Hello'); // Types instantly
await frame.type('#mytextarea', 'World', {delay: 100}); // Types slower, like a user
```

## frame.uncheck(selector[, options]) {#frame-uncheck}
- `selector` &#60;[string]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `force` &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
  - `noWaitAfter` &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
  - `position` &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `trial` &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[Promise]<[void]>&#62;

This method checks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Ensure that matched element is a checkbox or a radio input. If not, this method throws. If the element is already unchecked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now unchecked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.url() {#frame-url}
- returns: &#60;[string]&#62;

Returns frame's url.

## frame.waitForFunction(pageFunction[, arg, options]) {#frame-wait-for-function}
- `pageFunction` &#60;[function]|[string]&#62; Function to be evaluated in the page context.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.
- `options` &#60;[Object]&#62;
  - `polling` &#60;[number]|"raf"&#62; If `polling` is `'raf'`, then `pageFunction` is constantly executed in `requestAnimationFrame` callback. If `polling` is a number, then it is treated as an interval in milliseconds at which the function would be executed. Defaults to `raf`.
  - `timeout` &#60;[number]&#62; maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
- returns: &#60;[Promise]<[JSHandle]>&#62;

Returns when the `pageFunction` returns a truthy value, returns that value.

The [frame.waitForFunction(pageFunction[, arg, options])](./api/class-frame.mdx#frame-wait-for-function) can be used to observe viewport size change:

```js
const { firefox } = require('playwright');  // Or 'chromium' or 'webkit'.

(async () => {
  const browser = await firefox.launch();
  const page = await browser.newPage();
  const watchDog = page.mainFrame().waitForFunction('window.innerWidth < 100');
  page.setViewportSize({width: 50, height: 50});
  await watchDog;
  await browser.close();
})();
```

To pass an argument to the predicate of `frame.waitForFunction` function:

```js
const selector = '.foo';
await frame.waitForFunction(selector => !!document.querySelector(selector), selector);
```

## frame.waitForLoadState([state, options]) {#frame-wait-for-load-state}
- `state` &#60;"load"|"domcontentloaded"|"networkidle"&#62; Optional load state to wait for, defaults to `load`. If the state has been already reached while loading current document, the method resolves immediately. Can be one of:
  * `'load'` - wait for the `load` event to be fired.
  * `'domcontentloaded'` - wait for the `DOMContentLoaded` event to be fired.
  * `'networkidle'` - wait until there are no network connections for at least `500` ms.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[void]>&#62;

Waits for the required load state to be reached.

This returns when the frame reaches a required load state, `load` by default. The navigation must have been committed when this method is called. If current document has already reached the required state, resolves immediately.

```js
await frame.click('button'); // Click triggers navigation.
await frame.waitForLoadState(); // Waits for 'load' state by default.
```

## frame.waitForNavigation([options]) {#frame-wait-for-navigation}
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `url` &#60;[string]|[RegExp]|[function]\([URL]\):[boolean]&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while waiting for the navigation.
  - `waitUntil` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
    * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
    * `'load'` - consider operation to be finished when the `load` event is fired.
    * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[Promise]<[null]|[Response]>&#62;

Waits for the frame navigation and returns the main resource response. In case of multiple redirects, the navigation will resolve with the response of the last redirect. In case of navigation to a different anchor or navigation due to History API usage, the navigation will resolve with `null`.

This method waits for the frame to navigate to a new URL. It is useful for when you run code which will indirectly cause the frame to navigate. Consider this example:

```js
const [response] = await Promise.all([
  frame.waitForNavigation(), // The promise resolves after navigation has finished
  frame.click('a.delayed-navigation'), // Clicking the link will indirectly cause a navigation
]);
```

:::note
Usage of the [History API](https://developer.mozilla.org/en-US/docs/Web/API/History_API) to change the URL is considered a navigation.
:::

## frame.waitForSelector(selector[, options]) {#frame-wait-for-selector}
- `selector` &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `options` &#60;[Object]&#62;
  - `state` &#60;"attached"|"detached"|"visible"|"hidden"&#62; Defaults to `'visible'`. Can be either:
    * `'attached'` - wait for element to be present in DOM.
    * `'detached'` - wait for element to not be present in DOM.
    * `'visible'` - wait for element to have non-empty bounding box and no `visibility:hidden`. Note that element without any content or with `display:none` has an empty bounding box and is not considered visible.
    * `'hidden'` - wait for element to be either detached from DOM, or have an empty bounding box or `visibility:hidden`. This is opposite to the `'visible'` option.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[Promise]<[null]|[ElementHandle]>&#62;

Returns when element specified by selector satisfies `state` option. Returns `null` if waiting for `hidden` or `detached`.

Wait for the `selector` to satisfy `state` option (either appear/disappear from dom, or become visible/hidden). If at the moment of calling the method `selector` already satisfies the condition, the method will return immediately. If the selector doesn't satisfy the condition for the `timeout` milliseconds, the function will throw.

This method works across navigations:

```js
const { chromium } = require('playwright');  // Or 'firefox' or 'webkit'.

(async () => {
  const browser = await chromium.launch();
  const page = await browser.newPage();
  for (let currentURL of ['https://google.com', 'https://bbc.com']) {
    await page.goto(currentURL);
    const element = await page.mainFrame().waitForSelector('img');
    console.log('Loaded image: ' + await element.getAttribute('src'));
  }
  await browser.close();
})();
```

## frame.waitForTimeout(timeout) {#frame-wait-for-timeout}
- `timeout` &#60;[number]&#62; A timeout to wait for
- returns: &#60;[Promise]<[void]>&#62;

Waits for the given `timeout` in milliseconds.

Note that `frame.waitForTimeout()` should only be used for debugging. Tests using the timer in production are going to be flaky. Use signals such as network events, selectors becoming visible and others instead.

## frame.waitForURL(url[, options]) {#frame-wait-for-url}
- `url` &#60;[string]|[RegExp]|[function]\([URL]\):[boolean]&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while waiting for the navigation.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
  - `waitUntil` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
    * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
    * `'load'` - consider operation to be finished when the `load` event is fired.
    * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[Promise]<[void]>&#62;

Waits for the frame to navigate to the given URL.

```js
await frame.click('a.delayed-navigation'); // Clicking the link will indirectly cause a navigation
await frame.waitForURL('**/target.html');
```


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"